<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment"
    tools:padding="@dimen/page_padding">

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/ic_account_circle"
        android:contentDescription="@string/user_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text"
        style="@style/MusifyBodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_item_margin_medium"
        android:text="@string/user"
        app:layout_constraintBottom_toBottomOf="@id/user_icon"
        app:layout_constraintEnd_toStartOf="@id/config_button"
        app:layout_constraintStart_toEndOf="@id/user_icon"
        app:layout_constraintTop_toTopOf="@id/user_icon" />

    <ImageButton
        android:id="@+id/config_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_more_vert"
        android:contentDescription="@string/user_configuration"
        app:layout_constraintBottom_toBottomOf="@id/user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_icon" />

    <TextView
        android:id="@+id/playlists_title"
        style="@style/MusifyBodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/config_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlists_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlists_title" />

    <TextView
        android:id="@+id/tracks_title"
        style="@style/MusifyBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlists_list" />

    <ImageButton
        android:id="@+id/add_track_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_add"
        android:contentDescription="@string/add_track"
        app:layout_constraintBottom_toBottomOf="@id/tracks_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tracks_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks_lists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_track_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
